feat:get profile in different capacities
